refactor(vector-store): Optimize VectorStore class and improve error handling
- Add type hints for better code readability
- Optimize get_all_addresses method with list comprehension
- Improve error handling and logging
- Add docstrings for better documentation
- Clean up code structure and formatting
- Remove redundant list operations
- Improve collection handling in get_all_addresses

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-langchain
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-openai>=0.0.3
+langchain-chroma>=0.0.3
 sentence-transformers
-huggingface-hub
 pandas
 numpy
 scikit-learn
@@ -9,3 +11,7 @@ transformers
 accelerate
 chromadb
 regex
+openai
+tiktoken
+requests 
+python-dotenv
